--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
-    <application android:icon="@drawable/ic_launcher" android:label="@string/Juick" android:theme="@android:style/Theme.Light">
+    <application android:icon="@drawable/ic_launcher" android:label="@string/Juick" android:theme="@style/AppTheme">
         <uses-library android:name="com.google.android.maps"/>
         <activity android:name="com.juick.android.MainActivity" android:theme="@style/JuickStyle" android:logo="@drawable/ic_logo" android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
@@ -42,8 +42,16 @@
                 <data android:mimeType="vnd.android.cursor.item/vnd.com.juick.profile"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.juick.android.PMActivity" android:icon="@drawable/ic_user_32" android:theme="@style/Theme.Sherlock.Light" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"></activity>
-        <activity android:name="com.juick.android.NewMessageActivity" android:label="@string/Juick" android:theme="@style/Theme.Sherlock.Light" android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+
+        <activity android:name="com.juick.android.PMActivity"
+                  android:icon="@drawable/ic_user_32"
+                  android:theme="@style/AppTheme"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+
+        </activity>
+        <activity android:name="com.juick.android.NewMessageActivity"
+                  android:label="@string/Juick" android:theme="@style/AppTheme"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
                 <category android:name="android.intent.category.DEFAULT"/>
