--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juick" android:versionCode="40" android:versionName="2.3">
-    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="13"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juick">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -22,7 +21,7 @@
     <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
-    <application android:icon="@drawable/ic_launcher" android:label="@string/Juick" android:theme="@style/AppTheme">
+    <application android:icon="@drawable/ic_launcher" android:label="@string/Juick" android:theme="@android:style/Theme.Light">
         <uses-library android:name="com.google.android.maps"/>
         <activity android:name="com.juick.android.MainActivity" android:theme="@style/JuickStyle" android:logo="@drawable/ic_logo" android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
@@ -42,16 +41,8 @@
                 <data android:mimeType="vnd.android.cursor.item/vnd.com.juick.profile"/>
             </intent-filter>
         </activity>
-
-        <activity android:name="com.juick.android.PMActivity"
-                  android:icon="@drawable/ic_user_32"
-                  android:theme="@style/AppTheme"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
-
-        </activity>
-        <activity android:name="com.juick.android.NewMessageActivity"
-                  android:label="@string/Juick" android:theme="@style/AppTheme"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+        <activity android:name="com.juick.android.PMActivity" android:icon="@drawable/ic_user_32" android:theme="@style/Theme.AppCompat.Light" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"></activity>
+        <activity android:name="com.juick.android.NewMessageActivity" android:label="@string/Juick" android:theme="@style/Theme.AppCompat.Light" android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -61,7 +52,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.juick.android.ThreadActivity" android:label="" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"/>
-        <activity android:name="com.juick.android.SignInActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"/>
+        <activity android:name="com.juick.android.SignInActivity" android:theme="@style/JuickStyle" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"/>
         <activity android:name="com.juick.android.PreferencesActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"/>
         <activity android:name="com.juick.android.TagsActivity" android:label="@string/Tags" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"/>
         <activity android:name="com.juick.android.PickLocationActivity" android:label="@string/Pick_a_location" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"/>
