--- a/build.gradle
+++ b/build.gradle
@@ -11,23 +11,27 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.google.gms:google-services:1.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 
 android {
+    buildToolsVersion "23.0.1"
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
     defaultConfig {
          applicationId 'com.juick'
-        minSdkVersion 15
+        minSdkVersion 9
         targetSdkVersion 23
 	versionCode 45
         versionName "3.1"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -62,5 +66,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1'
     compile 'com.android.support:design:23.1.+'
     compile 'com.neovisionaries:nv-websocket-client:1.12'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
+    compile 'com.android.support:multidex:1.0.1'
+
 }
 
