--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
     <application android:icon="@drawable/ic_launcher" android:label="@string/Juick" android:theme="@android:style/Theme.Light">
-        <uses-library android:name="com.google.android.maps"/>
+        <!-- <uses-library android:name="com.google.android.maps"/> -->
         <activity android:name="com.juick.android.MainActivity" android:theme="@style/JuickStyle" android:logo="@drawable/ic_logo" android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -69,13 +69,22 @@
             <meta-data android:name="android.content.SyncAdapter" android:resource="@xml/sync_contacts"/>
             <meta-data android:name="android.provider.CONTACTS_STRUCTURE" android:resource="@xml/contacts"/>
         </service>
-        <receiver android:name="com.google.android.gcm.GCMBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
+        <receiver android:name="com.google.android.gms.gcm.GcmReceiver" android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
                 <category android:name="com.juick"/>
             </intent-filter>
         </receiver>
-        <service android:name=".GCMIntentService"/>
+        <service android:name=".android.GCMReceiverService" android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.c2m.RECEIVE"/>
+            </intent-filter>
+        </service>
+        <service android:name=".android.GCMIDService" android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.id.InstanceID"/>
+            </intent-filter>
+        </service>
     </application>
 </manifest>
