--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
-        classpath 'com.google.gms:google-services:1.3.0'
+        // classpath 'com.google.gms:google-services:1.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 
 android {
@@ -30,7 +30,7 @@ android {
         targetSdkVersion 23
 	versionCode 45
         versionName "3.1"
-        multiDexEnabled true
+        // multiDexEnabled true
     }
 
     buildTypes {
@@ -41,7 +41,6 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
       }
-//     useLibrary 'org.apache.http.legacy'
 
       lintOptions {
           abortOnError false
@@ -66,7 +65,7 @@ dependencies {
     compile 'com.android.support:design:23.1.+'
     compile 'com.neovisionaries:nv-websocket-client:1.12'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
-    compile 'com.android.support:multidex:1.0.1'
+    // compile 'com.android.support:multidex:1.0.1'
 
 }
 
